--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -246,43 +246,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 3072)"
+       "array([[ 0.17137372,  0.20935786,  0.24734199, ..., -1.11221356,\n",
+       "        -1.18795889, -1.26370421],\n",
+       "       [-0.95744057, -0.73961402, -0.17689544, ..., -0.86311203,\n",
+       "         0.02306577,  0.11349208],\n",
+       "       [ 1.76897058,  1.97764518,  2.08198247, ..., -0.1882247 ,\n",
+       "        -0.13621658, -0.08420846],\n",
+       "       ...,\n",
+       "       [ 2.61137137,  1.43530151,  0.4552433 , ..., -0.82173902,\n",
+       "        -0.89237581, -0.76876143],\n",
+       "       [ 1.15497298,  1.01233263,  1.03270982, ...,  0.62600038,\n",
+       "         0.58522923,  0.72792825],\n",
+       "       [ 0.0075019 ,  0.0075019 ,  0.0499436 , ..., -2.32078203,\n",
+       "        -2.36310808, -2.8710207 ]])"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_x.shape"
+    "t_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 3072)"
+       "(40000, 3072)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_x.shape"
+    "rand = np.random.normal(size=t_x.shape)\n",
+    "rand.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40000, 3072)"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(rand * t_x).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
