bug with dimensions

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -436,6 +436,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "import util\n",
+    "def load_config(path):\n",
+    "    \"\"\"\n",
+    "    Loads the config yaml from the specified path\n",
+    "\n",
+    "    args:\n",
+    "        path - Complete path of the config yaml file to be loaded\n",
+    "    returns:\n",
+    "        yaml - yaml object containing the config file\n",
+    "    \"\"\"\n",
+    "    return yaml.load(open(path, 'r'), Loader=yaml.SafeLoader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "configYamlPath = \"./configs/\"\n",
+    "configFile = 'config_2c.yaml'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = util.load_config(configYamlPath + configFile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'layer_specs': [3072, 128, 10],\n",
+       " 'activation': 'tanh',\n",
+       " 'learning_rate': 0.01,\n",
+       " 'batch_size': 128,\n",
+       " 'epochs': 100,\n",
+       " 'early_stop': True,\n",
+       " 'early_stop_epoch': 5,\n",
+       " 'L2_penalty': 0,\n",
+       " 'momentum': True,\n",
+       " 'momentum_gamma': 0.9,\n",
+       " 'weight_type': 'random'}"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def append_bias(X):\n",
+    "    \"\"\"\n",
+    "    TODO\n",
+    "    Appends bias to the input\n",
+    "    args:\n",
+    "        X (N X d 2D Array)\n",
+    "    returns:\n",
+    "        X_bias (N X (d+1)) 2D Array\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    N = X.shape[0]\n",
+    "    bias = np.ones((N, 1))\n",
+    "    return np.column_stack((bias, X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  1.,  2.],\n",
+       "       [ 1.,  3.,  4.,  5.],\n",
+       "       [ 1.,  6.,  7.,  8.],\n",
+       "       [ 1.,  9., 10., 11.]])"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "append_bias(np.arange(12).reshape((4,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.00000000e+00, 4.19974342e-01, 7.06508249e-02],\n",
+       "       [9.86603717e-03, 1.34095068e-03, 1.81583231e-04],\n",
+       "       [2.45765474e-05, 3.32610934e-06, 4.50140598e-07],\n",
+       "       [6.09199171e-08, 8.24461455e-09, 1.11578724e-09]])"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - (np.tanh(np.arange(12).reshape((4, 3)))**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,   0,  -1],\n",
+       "       [ -2,  -3,  -4],\n",
+       "       [ -5,  -6,  -7],\n",
+       "       [ -8,  -9, -10]])"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - np.arange(12).reshape((4,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2],\n",
+       "       [ 3,  4,  5],\n",
+       "       [ 6,  7,  8],\n",
+       "       [ 9, 10, 11]])"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(12).reshape((4,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
